packages/engine/src/tests/snapshots/engine__tests__partition__clean_plain_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      15
    ],
    "items": 8,
    "width": 57.6,
    "height": 44.8,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      17,
      53
    ],
    "items": 13,
    "width": 84.88,
    "height": 161.02,
    "x": 0.0,
    "y": 62.08
  },
  {
    "range": [
      54,
      75
    ],
    "items": 5,
    "width": 56.24,
    "height": 89.6,
    "x": 0.0,
    "y": 241.02
  }
]
