packages/engine/src/tests/snapshots/engine__tests__partition__clean_quote_footnote_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      13
    ],
    "items": 3,
    "width": 65.84,
    "height": 44.8,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      15,
      39
    ],
    "items": 9,
    "width": 63.76,
    "height": 112.0,
    "x": 0.0,
    "y": 62.08
  },
  {
    "range": [
      40,
      67
    ],
    "items": 7,
    "width": 56.16,
    "height": 134.4,
    "x": 0.0,
    "y": 192.0
  },
  {
    "range": [
      69,
      131
    ],
    "items": 15,
    "width": 102.16,
    "height": 67.2,
    "x": 0.0,
    "y": 344.32
  },
  {
    "range": [
      133,
      223
    ],
    "items": 46,
    "width": 517.28,
    "height": 135.01,
    "x": 0.0,
    "y": 429.44
  }
]
