packages/engine/src/tests/snapshots/engine__tests__partition__clean_raw_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      41
    ],
    "items": 18,
    "width": 57.6,
    "height": 201.6,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      43,
      97
    ],
    "items": 30,
    "width": 75.2,
    "height": 261.12,
    "x": 0.0,
    "y": 219.52
  },
  {
    "range": [
      99,
      115
    ],
    "items": 4,
    "width": 54.16,
    "height": 67.2,
    "x": 0.0,
    "y": 499.2
  }
]
