packages/engine/src/tests/snapshots/engine__tests__partition__clean_show_rules_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      63,
      72
    ],
    "items": 4,
    "width": 133.63,
    "height": 42.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      74,
      120
    ],
    "items": 17,
    "width": 44.56,
    "height": 96.48,
    "x": 0.0,
    "y": 61.44
  }
]
