packages/engine/src/tests/snapshots/engine__tests__partition__clean_structural_then_text_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      45,
      62
    ],
    "items": 4,
    "width": 50.44,
    "height": 49.06,
    "x": 0.0,
    "y": 0.0
  }
]
