packages/engine/src/tests/snapshots/engine__tests__partition__clean_structure_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      24,
      31
    ],
    "items": 6,
    "width": 55.2,
    "height": 95.04,
    "x": 0.0,
    "y": -1.28
  },
  {
    "range": [
      33,
      56
    ],
    "items": 9,
    "width": 46.8,
    "height": 148.0,
    "x": 0.0,
    "y": 111.04
  },
  {
    "range": [
      58,
      63
    ],
    "items": 7,
    "width": 26.24,
    "height": 25.12,
    "x": 18.8,
    "y": 276.96
  },
  {
    "range": [
      64,
      80
    ],
    "items": 15,
    "width": 72.16,
    "height": 65.44,
    "x": 17.6,
    "y": 302.08
  },
  {
    "range": [
      82,
      88
    ],
    "items": 15,
    "width": 35.82,
    "height": 25.12,
    "x": 28.5,
    "y": 367.52
  },
  {
    "range": [
      89,
      95
    ],
    "items": 6,
    "width": 35.82,
    "height": 22.4,
    "x": 28.5,
    "y": 392.64
  },
  {
    "range": [
      97,
      106
    ],
    "items": 11,
    "width": 8.32,
    "height": 122.88,
    "x": 0.0,
    "y": 432.96
  },
  {
    "range": [
      107,
      116
    ],
    "items": 4,
    "width": 15.28,
    "height": 72.64,
    "x": -0.16,
    "y": 573.76
  },
  {
    "range": [
      117,
      126
    ],
    "items": 6,
    "width": 8.59,
    "height": 122.88,
    "x": 0.0,
    "y": 664.32
  },
  {
    "range": [
      174,
      232
    ],
    "items": 18,
    "width": 35.1,
    "height": 129.84,
    "x": 0.0,
    "y": 805.28
  }
]
