packages/engine/src/tests/snapshots/engine__tests__partition__clean_sup_attachment_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      22
    ],
    "items": 9,
    "width": 58.05,
    "height": 19.36,
    "x": -29.02,
    "y": 40.32
  },
  {
    "range": [
      24,
      30
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 78.24
  }
]
