packages/engine/src/tests/snapshots/engine__tests__partition__clean_table_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      57
    ],
    "items": 28,
    "width": 14.09,
    "height": 63.24,
    "x": -0.5,
    "y": -0.5
  },
  {
    "range": [
      59,
      84
    ],
    "items": 8,
    "width": 56.8,
    "height": 156.8,
    "x": 0.0,
    "y": 80.8
  },
  {
    "range": [
      85,
      110
    ],
    "items": 5,
    "width": 35.12,
    "height": 89.6,
    "x": -0.16,
    "y": 255.52
  },
  {
    "range": [
      111,
      136
    ],
    "items": 8,
    "width": 8.4,
    "height": 156.8,
    "x": 0.0,
    "y": 363.04
  },
  {
    "range": [
      137,
      160
    ],
    "items": 9,
    "width": 56.8,
    "height": 179.2,
    "x": 0.0,
    "y": 537.76
  }
]
