packages/engine/src/tests/snapshots/engine__tests__partition__clean_tight_loose_lists_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      11
    ],
    "items": 8,
    "width": 102.64,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      12,
      23
    ],
    "items": 5,
    "width": 84.45,
    "height": 22.4,
    "x": 18.35,
    "y": 21.76
  },
  {
    "range": [
      24,
      37
    ],
    "items": 6,
    "width": 103.49,
    "height": 22.4,
    "x": 18.35,
    "y": 44.16
  },
  {
    "range": [
      39,
      83
    ],
    "items": 10,
    "width": 277.04,
    "height": 62.72,
    "x": 17.6,
    "y": 66.56
  },
  {
    "range": [
      85,
      96
    ],
    "items": 18,
    "width": 83.84,
    "height": 22.4,
    "x": 18.96,
    "y": 129.28
  }
]
