packages/engine/src/tests/snapshots/engine__tests__partition__clean_unicode_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      30
    ],
    "items": 11,
    "width": 46.8,
    "height": 131.28,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      32,
      59
    ],
    "items": 20,
    "width": 34.96,
    "height": 425.6,
    "x": 0.0,
    "y": 148.56
  },
  {
    "range": [
      61,
      105
    ],
    "items": 8,
    "width": 82.96,
    "height": 156.8,
    "x": 0.0,
    "y": 592.08
  },
  {
    "range": [
      107,
      137
    ],
    "items": 10,
    "width": 71.76,
    "height": 112.0,
    "x": -4.24,
    "y": 766.8
  },
  {
    "range": [
      139,
      164
    ],
    "items": 11,
    "width": 56.8,
    "height": 147.42,
    "x": 0.0,
    "y": 896.72
  }
]
